# mountskv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
res/: resource.qrc
src/: MainView.cpp  MainView.h  main.cpp
src/widgets/: DraggableTreeWidget.h
